--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "customize-cra": "^0.4.1",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.19.1",
@@ -17,11 +22,12 @@
     "react-mobx": "0.0.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
-    "start": "node ./server/app.js",
-    "start_old": "npm-run-all --parallel start:**",
+    "start_old": "node ./server/app.js",
+    "start": "npm-run-all --parallel start:**",
     "start:client": "react-app-rewired start",
     "start:server": "node ./server/app.js",
     "build": "react-app-rewired build",
