--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "customize-cra": "^0.4.1",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.19.1",
