--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-proxy-middleware": "^0.19.1",
     "mobx": "^5.0.0",
     "mobx-react": "^6.1.1",
+    "mysql": "^2.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
