--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "classnames": "^2.2.6",
     "customize-cra": "^0.4.1",
     "express": "^4.17.1",
+    "history": "^4.9.0",
     "http-proxy-middleware": "^0.19.1",
+    "jquery": "^1.9.1",
     "mobx": "^5.0.0",
     "mobx-react": "^6.1.1",
+    "mobx-react-router": "^4.0.7",
     "mysql": "^2.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
