feat: 히스토리 문제 해결
History 모듈을 사용해서 export한 것으로 모든 곳에서 가져다 씀

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,7 @@
     "node": true,
     "es6": true
   },
-  "rules": {
-    "react/jsx-filename-extension": [0],
-    "linebreak-style": 0,
-  },
+  "rules": { "react/jsx-filename-extension": [0] },
   "plugins": [
     "react",
     "jsx-a11y",
